# Chess_QT6

./: .gitignore  AI.cpp  AI.h  BSDNetworkManager.cpp  BSDNetworkManager.h  CMakeLists.txt  ChessWrappers.cpp  ChessWrappers.h  NetworkManager.cpp  NetworkManager.h  PlayChess.cpp  board.cpp  board.h  board.qml  figures.cpp  figures.h  hostMultiplayer.qml  joinMultiplayer.qml  main.cpp  mainMenu.qml  piece.cpp  piece.h
